apps/gotest-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotest-app-$DEPLOY_TAG
  namespace: $DEPLOY_TAG
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gotest-app-$DEPLOY_TAG
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotest-app
  namespace: $DEPLOY_TAG
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gotest-app
  template:
    metadata:
      labels:
        app: gotest-app
    spec:
      containers:
      - image: reloni/goexample:$DEPLOY_TAG
        name: gotest-app-$DEPLOY_TAG
        ports:
        - containerPort: 8080
          protocol: TCP
