apps/gotest-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotest-redis
  namespace: $DEPLOY_TAG
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gotest-redis-$DEPLOY_TAG
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotest-redis
  namespace: $DEPLOY_TAG
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gotest-redis-$DEPLOY_TAG
  template:
    metadata:
      labels:
        app: gotest-redis-$DEPLOY_TAG
    spec:
      containers:
      - image: reloni/goexample-redis:$GOTEST_TAG
        name: gotest-redis-$DEPLOY_TAG
        ports:
        - containerPort: 8080
          protocol: TCP
