apps/fastcgi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastcgi-$DEPLOY_TAG
  namespace: $DEPLOY_TAG
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: fastcgi-$DEPLOY_TAG
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $DEPLOY_TAG-ingress-fastcgi
  namespace: $DEPLOY_TAG
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "fastcgi-configmap-$DEPLOY_TAG"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      fastcgi_param REQUEST_METHOD $request_method;
      # fastcgi_pass php:9000;
      fastcgi_index index.php;
      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
      include fastcgi_params;
spec:
  tls:
  - hosts:
    - "fpm.$DEPLOY_TAG.alpinadigital.rocks"
    secretName: ad-rocks-widlcard
  rules:
  - host: "fpm.$DEPLOY_TAG.alpinadigital.rocks"
    http:
      paths:
      - path: /
        backend:
          serviceName: fastcgi-$DEPLOY_TAG
          servicePort: fastcgi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastcgi-$DEPLOY_TAG
  namespace: $DEPLOY_TAG
spec:
  replicas: 5
  selector:
    matchLabels:
      app: fastcgi-$DEPLOY_TAG
  template:
    metadata:
      labels:
        app: fastcgi-$DEPLOY_TAG
        digest: $IMAGE_DIGEST
    spec:
      containers:
      - image: reloni/fastcgi:$DEPLOY_TAG
        imagePullPolicy: Always
        name: fastcgi-$DEPLOY_TAG
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 9000
          name: fastcgi
