apps/ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_COMMIT_REF_NAME-ingress
  namespace: $CI_COMMIT_REF_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/server-snippets: |
      gzip on;
      gzip_http_version 1.1;
      gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
spec:
  tls:
  - hosts:
    - $CI_COMMIT_REF_NAME.example.com
    secretName: tls-secret
  rules:
  - host: $CI_COMMIT_REF_NAME.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gotest-app-$CI_COMMIT_REF_NAME
          servicePort: 80
